# CopyRightHeaderChecker

./: CopyrightHeaderChecker.py  LICENSE  README.md
copyrightheader/: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
copyrightheader/src/copyrightheader/: VERSION.py  __init__.py  _version.py  analyser.py  checker.py  configuration.py  header.py  skeleton.py
copyrightheader/tests/: conftest.py  test_checker.py  test_checker_info.py  test_checker_process.py  test_skeleton.py  test_version.py
copyrightheader/tests/data/CPP/: CMopServer.cpp  HTTPNode.cpp  HTTPNode.h
copyrightheader/tests/data/HTML/: index.html
copyrightheader/tests/data/JAVA/: Address.java  Application.java  BaseEntity.java
copyrightheader/tests/data/JS/: player.js  player.spec.js
copyrightheader/tests/data/MD/: README.md
copyrightheader/tests/data/SCRIPTS/: .travis.yml  CMakeLists.txt  easinAnalyser.py  package.json  pom.xml
