[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "copyrightheader/src/copyrightheader/_version.py"
root = ".."
relative_to = "__file__"
version_scheme = "guess-next-dev"
